Tests/Pos/Null/nullReturn2.p
main machine Entry {
    foreign fun foo () { return null; }
    start state bar {
        entry {
            foo();
        }
    }
}
